--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Калькулятор | Свят</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -23,7 +23,7 @@
         <header>
           <div class="j-center">
             <div class="head-wrapper">
-              <img src="./assets/img/logo_icon.svg" alt="" />
+              <img src="/assets/img/logo_icon.svg" alt="" />
               <h1>Calendar</h1>
             </div>
           </div>
@@ -152,6 +152,6 @@
         </main>
       </div>
     </div>
-    <script src="/main.js" type="module"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
