--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="./assets/img/logo_icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/img/logo_icon.svg" />
   </head>
   <body>
     <div class="intro">
       <span class="logo"
-        ><img src="./assets/img/logo_vertical.svg" alt=""
+        ><img src="/assets/img/logo_vertical.svg" alt=""
       /></span>
     </div>
 
