--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Калькулятор | Свят</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://design-savchenko.github.io/calendar-app/css/style.css"
+    />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="/assets/img/logo_icon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://design-savchenko.github.io/calendar-app/assets/img/logo_icon.svg"
+    />
   </head>
   <body>
     <div class="intro">
       <span class="logo"
-        ><img src="/assets/img/logo_vertical.svg" alt=""
+        ><img
+          src="https://design-savchenko.github.io/calendar-app/assets/img/logo_vertical.svg"
+          alt=""
       /></span>
     </div>
 
@@ -23,7 +32,10 @@
         <header>
           <div class="j-center">
             <div class="head-wrapper">
-              <img src="/assets/img/logo_icon.svg" alt="" />
+              <img
+                src="https://design-savchenko.github.io/calendar-app/assets/img/logo_icon.svg"
+                alt=""
+              />
               <h1>Calendar</h1>
             </div>
           </div>
@@ -152,6 +164,9 @@
         </main>
       </div>
     </div>
-    <script src="main.js" type="module"></script>
+    <script
+      src="https://design-savchenko.github.io/calendar-app/main.js"
+      type="module"
+    ></script>
   </body>
 </html>
